Refactore to split queries in multiple files and add find by id endpoint as an example
